# pacs-personal

./: .gitignore  README.md
LeibnizPi/: Makefile  main.cpp
MPI_Hello_World/: main.c
MoveSemantic/: Makefile  main.cpp
ParallelMatrixProduct/: A.csv  main.cpp  x.csv
ParallelPi/: Makefile  main_MPI.cpp  main_OMP.cpp
PingPong/: main.cpp
Polynomials/: main_polynomials.cpp  polynomials.hpp
Simpson_Quadrature/: Makefile  main.cpp
SquareRoot/: Makefile  main.cpp
Template_Norms/: Makefile  Norms.hpp  main.cpp
UPDTARR/: main.cpp
WarPact/: Makefile  Network.hpp  Node.hpp  main.cpp
deal.II/tutorial_01/: CMakeLists.txt
deal.II/tutorial_04/: main.cpp
deal.II/tutorial_05_1/: CMakeLists.txt  main.cpp
dealII/tutorial_01/: main.cpp
dealII/tutorial_02/: main.cpp
dealII/tutorial_03/: main.cpp
dealII/tutorial_04/: main.cpp
dealII/tutorial_05_1/: main.cpp
pyBind/: CMakeLists.txt  example.cpp  main.py
